[workspace]
resolver = "2"

members = [
    "common",
    "ebpf",
    "userspace",
    "dashboard",
]

default-members = [
    "common",
    "userspace",
    "dashboard",
]

[workspace.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
aya-log = "0.2"

tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time"
] }

log = "0.4"
env_logger = "0.11"

bytemuck = { version = "1", features = ["derive"] }

anyhow = "1"